@@ -326,6 +326,7 @@ function browseHandleListResponse(view, item, command, resp, prevPage, appendIte
         view.grid = {allowed:resp.canUseGrid,
                      use: resp.canUseGrid && (resp.forceGrid || isSetToUseGrid(view.current && view.current.id.startsWith(TOP_ID_PREFIX) && view.current.id!=TOP_FAVORITES_ID ? GRID_OTHER : command, view.current)),
                      numColumns:0, ih:GRID_MIN_HEIGHT, rows:[], few:false, haveSubtitle:true};
+        console.log(resp.canUseGrid);
         view.jumplistActive=0;
         view.prevPage = prevPage;
         view.hoverBtns = !IS_MOBILE && view.items.length>0 &&
@@ -1809,7 +1810,7 @@ function browseMyMusicMenu(view) {
                     } else if (c.id.startsWith("myMusicGenres")) {
                         item.svg = "guitar-acoustic";
                         item.icon = undefined;
-                        item.cancache = true;
+                        item.cancache = false;
                         item.id = GENRES_ID;
                     } else if (c.id == "myMusicPlaylists") {
                         item.icon = "list";
