@@ -58,6 +58,7 @@ my $USER_THEME_URL_PARSER_RE = qr{material/usertheme/.+}i;
 my $USER_COLOR_URL_PARSER_RE = qr{material/usercolor/.+}i;
 my $DOWNLOAD_PARSER_RE = qr{material/download/.+}i;
 my $BACKDROP_URL_PARSER_RE = qr{material/backdrops/.+}i;
+my $GENRE_URL_PARSER_RE = qr{material/genres/.+}i;
 
 my $DEFAULT_COMPOSER_GENRES = string('PLUGIN_MATERIAL_SKIN_DEFAULT_COMPOSER_GENRES');
 my $DEFAULT_CONDUCTOR_GENRES = string('PLUGIN_MATERIAL_SKIN_DEFAULT_CONDUCTOR_GENRES');
@@ -112,7 +113,8 @@ sub initPlugin {
         showComment => '0',
         pagedBatchSize => lmsVersion()>=80400 ? 250 : 100,
         noArtistFilter => '1',
-        releaseTypeOrder => ''
+        releaseTypeOrder => '',
+        genreImages => '0'
     });
 
     if (main::WEBUI) {
@@ -151,6 +153,7 @@ sub initPlugin {
         Slim::Web::Pages->addRawFunction($USER_COLOR_URL_PARSER_RE, \&_userColorHandler);
         Slim::Web::Pages->addRawFunction($DOWNLOAD_PARSER_RE, \&_downloadHandler);
         Slim::Web::Pages->addRawFunction($BACKDROP_URL_PARSER_RE, \&_backdropHandler);
+        Slim::Web::Pages->addRawFunction($GENRE_URL_PARSER_RE, \&_genreHandler);
         # make sure scanner does pre-cache artwork in the size the skin is using in browse modesl
         Slim::Control::Request::executeRequest(undef, [ 'artworkspec', 'add', '300x300_f', 'Material Skin' ]);
     	if ($serverprefs->get('precacheHiDPIArtwork')) {
@@ -418,6 +421,7 @@ sub _cliCommand {
         $request->addResult('pagedBatchSize', $prefs->get('pagedBatchSize'));
         $request->addResult('noArtistFilter', $prefs->get('noArtistFilter'));
         $request->addResult('releaseTypeOrder', uc($prefs->get('releaseTypeOrder')));
+        $request->addResult('genreImages', $prefs->get('genreImages'));
         $request->setStatusDone();
         return;
     }
@@ -1768,6 +1772,22 @@ sub _backdropHandler {
     }
     $response->code(RC_OK);
     Slim::Web::HTTP::sendStreamingFile( $httpClient, $response, "image/jpeg", $filePath, '', 'noAttachment' );
+}
+
+sub _genreHandler {
+    my ( $httpClient, $response ) = @_;
+    return unless $httpClient->connected;
+
+    my $request = $response->request;
+    my $fileName = basename($request->uri->path);
+    my $filePath = Slim::Utils::Prefs::dir() . "/material-skin/genres/" . $fileName . ".jpg";
+    $response->code(RC_OK);
+    if (-e $filePath) {
+        Slim::Web::HTTP::sendStreamingFile( $httpClient, $response, "image/jpeg", $filePath, '', 'noAttachment' );
+    } else {
+        $filePath = dirname(__FILE__) . "/HTML/material/html/images/nogenre.png";
+        Slim::Web::HTTP::sendStreamingFile( $httpClient, $response, "image/png", $filePath, '', 'noAttachment' );
+    }
 }
 
 1;
