@@ -26,6 +26,7 @@
     LMS.
 19. If BlissMixer is installed, then add 'Radio' button to artist and album
     action menus.
+20. Add support for displaying genre images.
 
 4.0.4
 -----
